add GET pvz
